# text

./: Dockerfile  README.md  [Planilha Modelo] Anotação de Dados Textuais (Classes de Palavra).xlsx  __init__.py  docker-compose.yaml  pyproject.toml  requirements.txt
app/: application.py  controllers.py  main.py  models.py  schemas.py
doc/: APIReference.md  TokenFrequency.md
doc/code/dockerfile-ex-1/: Dockerfile
src/app/: schemas.py  service.py
tests/: fixtures.py  test_models.py
text/: controllers.py  main.py  models.py  router.py
