[tool.poetry]
name = "text"
version = "0.1.0"
description = ""
authors = ["--add <tiagosn06@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
spacy = "^3.7.4"
pytest = "^8.1.1"
black = "^24.3.0"
fastapi = "^0.110.0"
sqlalchemy = "^2.0.28"

[pytest]
testpaths = "tests"

[tool.pytest.ini_options]
pythonpath = "src"

[tool.poetry.scripts]
#test = "pytest"
#format = "black src/ tests/"
#run = "uvicorn app.main:app --host 0.0.0.0 --port 8080"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
